--- a/dist.ini
+++ b/dist.ini
@@ -20,3 +20,8 @@ repository.type = git
 [Prereqs]
 perl = 5.010001
 
+File::Find::Rule = 0
+File::Spec = 0
+Mojolicious = 4.0
+Scalar::Util = 0
+Test::More = 0
